--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
 <script src="http://code.jquery.com/qunit/qunit-1.18.0.js"></script>
-
 <script src="js/map.js"></script>
 <script src="tests/map-tests.js"></script>
 
@@ -19,5 +18,6 @@
 <script src="js/foreach.js"></script>
 <script src="tests/foreach-tests.js"></script>
 
+<script src="tests/initial-tests.js"></script>
 </body>
 </html>
