add some automatic stuff

--- a/index.html
+++ b/index.html
@@ -2,22 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Tests for functions</title>
-  <link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.18.0.css">
+  <title>Some Another page</title>
 </head>
 <body>
-<div id="qunit"></div>
-<div id="qunit-fixture"></div>
-<script src="http://code.jquery.com/qunit/qunit-1.18.0.js"></script>
-<script src="js/map.js"></script>
-<script src="tests/map-tests.js"></script>
-
-<script src="js/filter.js"></script>
-<script src="tests/filter-tests.js"></script>
-
-<script src="js/foreach.js"></script>
-<script src="tests/foreach-tests.js"></script>
-
-<script src="tests/initial-tests.js"></script>
+  <script src="js/all.js"></script>
 </body>
 </html>
