--- a/tests/test.html
+++ b/tests/test.html
@@ -10,6 +10,6 @@
 <div id="qunit-fixture"></div>
 <script src="http://code.jquery.com/qunit/qunit-1.18.0.js"></script>
 <script src="./../js/all.js"></script>
-<script src="./tests.js"></script>
+<script src="tests.js"></script>
 </body>
 </html>
